# internal/api/v1generated/oas_operations_gen.go
@@ -41,7 +41,7 @@ const (
 	GetTaskDeliveryOperation                             OperationName = "GetTaskDelivery"
 	GetTaskStageClaimOperation                           OperationName = "GetTaskStageClaim"
 	GetTaskWorkPacketOperation                           OperationName = "GetTaskWorkPacket"
-	LinkTaskMergeRequestOperation                        OperationName = "LinkTaskMergeRequest"
+	LinkTaskCodeChangeOperation                          OperationName = "LinkTaskCodeChange"
 	ListAgentConversationsOperation                      OperationName = "ListAgentConversations"
 	ListLabelsOperation                                  OperationName = "ListLabels"
 	ListMilestoneCriteriaOperation                       OperationName = "ListMilestoneCriteria"
@@ -70,7 +70,7 @@ const (
 	RestoreProjectOperation                              OperationName = "RestoreProject"
 	RestoreTaskOperation                                 OperationName = "RestoreTask"
 	UnbindProjectRepositoryOperation                     OperationName = "UnbindProjectRepository"
-	UnlinkTaskMergeRequestOperation                      OperationName = "UnlinkTaskMergeRequest"
+	UnlinkTaskCodeChangeOperation                        OperationName = "UnlinkTaskCodeChange"
 	UpdateAgentConversationOperation                     OperationName = "UpdateAgentConversation"
 	UpdateCriterionOperation                             OperationName = "UpdateCriterion"
 	UpdateCurrentAgentConversationConfigurationOperation OperationName = "UpdateCurrentAgentConversationConfiguration"
